                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 13-04-2005 fixed: PaPlayer audio device starving by increasing buffer size
  - 13-04-2005 fixed: highlighting in dvdmenu failed if an menu with different highlighting scheme had been displayed before
  - 13-04-2005 fixed: universal remote double taps (Sony universal)
  - 13-04-2005 fixed: controlbutton python docs.
  - 13-04-2005 fixed: label/image <info> showed wrong info if no valid info was available.
  - 13-04-2005 changed: My Pictures uses GUIViewControl to handle views.
  - 13-04-2005 fixed: Remote double tap (universal remotes)
  - 13-04-2005 fixed: Crash/exception in Visualisation control (caused render issues)
  - 13-04-2005 fixed: Spectrum analyser didn't free memory correctly.
  - 13-04-2005 fixed: dvdplayer didn't work at all as it's pixelshader source had been removed
  - 13-04-2005 added: new virtual window for dvdplayer when in menu mode. allows nicer keymappings.
  - 13-04-2005 updated: German language file
  - 13-04-2005 updated: French language file (Thnx to modhack)
  - 13-04-2005 updated: Italian language file (Thnx to kotix)
  - 13-04-2005 updated: Polish language file (Thnx to napek)
  - 13-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 13-04-2005 updated: Finnish language file (Thnx to jutski)
  - 13-04-2005 fixed: ff/rw/play buttons on remote didn't work in fullscreen
  - 13-04-2005 added: Support to toggle new time/progbar display in fullscreen (default mapped to white button)
  - 12-04-2005 changed: Textures are only loaded as needed if the are specified as dynamic in OnWindowLoaded().
  - 12-04-2005 fixed: PaPlayer cue sheet based mp3 playback could crash at time 0.